shared/css/cyph.im.scss
@import 'bourbon/bourbon';


html, body, #main {
	max-width: 100% !important;
	max-height: 100% !important;
	overflow: hidden;
}

html:not(.mobile) {
	#main {
		padding-bottom: 10px;
		padding-left: 200px;
		padding-right: 20px;
	}

	.md-button img {
		height: 100%;
	}
}

html:not(.mobile) #desktop-sidebar, html:not(.mobile) #message-wrapper, #copy-url-mobile {
	.md-button:not([disabled="disabled"]) {
		color: #444;
		background-color: #7d4fd3 !important;

		&.focus, &:hover {
			background-color: #7239dd !important;
		}
	}

	.md-fab {
		height: 42px;
		width: 42px;

		img {
			height: 80%;
			vertical-align: middle;
		}
	}
}

input, textarea {
	border-radius: 0px;
}


.app-message {
	margin-top: 20px;

	* {
		font-weight: bold;
	}
}


#message-box {
	resize: none;
}

html:not(.mobile) {
	#message-box {
		@include transition(all 0.35s ease-in-out);
		outline: none;
		padding: 3px;
		border: 1px solid #dddddd;
		margin: 0px 10px;
		min-height: 60px;
		max-height: 120px;
		width: calc(100% - 29px);
	}

	#message-box:focus {
		box-shadow: 0px 0px 10px #7239dd;
		border: 1px solid #8b62d9;
	}
}

html.mobile {
	#message-box {
		width: 100%;
		height: 48px;
		font-size: 17px;
		line-height: 22px;
		padding: 13px;
		padding-right: 60px;
		box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
	}

	#message-box:focus ~ #new-messages {
		display: none;
	}
}

#message-wrapper {
	position: relative;
}

#insert-photo-desktop {
	position: absolute;
	top: 9px;
	right: 29px;
}
.md-button input[type='file'] {
	display: none;
}
#send-button, #insert-photo-mobile {
	position: fixed;
	bottom: 5px;
	right: 20px;
	opacity: 0.75;
	z-index: 3;
	width: 38px;
	height: 38px;

	* {
		width: 100%;
		height: 100%;
	}

	/* Crazy fix to prevent jankiness upon message send on mobile */
	pointer-events: none;
}
#message-wrapper {
	.message-wrapper-hidden {
		@include transform(translateY(50vh) !important);
		@include transition(transform 0.25s linear);
	}
	:not(.message-wrapper-hidden) {
		@include transition(transform 0.15s linear);
	}
}


#message-list:not(.nano) {
	overflow-y: scroll;
}
html:not(.mobile) #message-list > md-content {
	padding-right: 10px;
}


#message-list:not(.is-connected) {
	.message-item:not(:first-child) {
		opacity: 0.75;

		.message-timestamp .message-pending {
			display: inline;
		}
	}

	#setting-up-crypto {
		opacity: 0.075;
	}
}

#message-list {
	.message-item {
		@include transition(opacity 1s ease-in-out);

		.message-timestamp .message-pending {
			display: none;
		}
	}

	#setting-up-crypto {
		position: absolute;
		pointer-events: none;
		width: 100%;
		height: 100%;
		top: 0px;
		left: 0px;
		margin-left: 0px;

		opacity: 0;
		@include transition(opacity 1s ease-in-out);
	}

	#friend-is-typing {
		margin-top: 20px;
		width: 100%;

		opacity: 0;
		@include transition(opacity 1s ease-in-out);

		.ellipsis-spinner > div {
			width: 8px;
			height: 8px;
		}
	}
}

html:not(.mobile) #friend-is-typing {
	text-align: left;
	padding-left: 20px;
}
html.mobile #friend-is-typing {
	text-align: center;
}

#message-list.is-connected {
	#friend-is-typing.show {
		opacity: 1;
		@include transition(opacity 1s ease-in-out);
	}
}


.message-item {
	.message {
		word-wrap: break-word;
		@include hyphens(auto);

		> * {
			padding-top: 5px;
		}
	}

	img:not(.emoji) {
		max-width: 25%;
		margin-top: 10px;
		margin-bottom: 10px;
		margin-right: auto;
		display: block;
		box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.4);
	}

	.emoji {
		height: 1.2em;
		margin-bottom: -.2em;
		margin-left: .2em;
	}
}
.message-item.author-me {
	background-color: #8652e4;
	box-shadow: 0px 0px 5px #8652e4;
}
.message-item.author-friend {
	background-color: #7d53cb;
	box-shadow: 0px 0px 5px #7d53cb;
}
html:not(.mobile) {
	.message-item {
		padding: 7.5px 10px 5px 10px;
		margin: 2.5px;

		.message {
			max-width: 85%;
			padding-bottom: 5px;
		}

		img:not(.emoji) {
			margin-left: 10vw;
		}

		.message-timestamp {
			text-align: right;
		}
	}
}
html.mobile {
	.message-item {
		position: relative;
		max-width: 80%;
		min-width: 120px;
		padding-left: 15px;
		padding-right: 15px;
		padding-top: 10px;
		padding-bottom: 25px;
		margin-left: auto;
		margin-right: auto;
		margin-top: 5px;
		font-size: 18px;

		.message {
			width: 100%;
		}

		img:not(.emoji) {
			margin-left: auto;
		}

		.message-timestamp {
			position: absolute;
			bottom: 5px;
			font-size: 10px;
			color: #dddddd;
		}

		.message-author {
			display: none;
		}
	}

	.message-item.author-me {
		margin-right: 5%;

		.message {
			text-align: left;
			/* text-align: right; */
		}

		.message-timestamp {
			text-align: right;
			right: 10px;
		}
	}
	.message-item.author-me:after, .message-item.author-me:before {
		content: '';
		position: absolute;
		border-style: solid;
		border-width: 18px 0px 0px 12px;
		bottom: 0px;
	}
	.message-item.author-me:after {
		border-color: transparent #8652e4;
		right: -12px;
	}
	.message-item.author-me:before {
		border-color: transparent transparent;
		right: 0px;
		box-shadow: 5px 1px 5px #8652e4;
		@include transform(rotate(-35deg));
	}

	.message-item.author-friend {
		margin-left: 5%;

		.message {
			text-align: left;
		}

		.message-timestamp {
			text-align: left;
			left: 10px;
		}
	}
	.message-item.author-friend:after, .message-item.author-friend:before {
		content: '';
		position: absolute;
		border-style: solid;
		border-width: 0px 12px 18px 0px;
		top: 0px;
	}
	.message-item.author-friend:after {
		border-color: transparent #7d53cb;
		left: -12px;
	}
	.message-item.author-friend:before {
		border-color: transparent transparent;
		left: 0px;
		box-shadow: 5px 1px 5px #7d53cb;
		@include transform(rotate(-215deg));
	}

	.message-item.author-app {
		width: 90%;
		background-color: transparent;

		.message {
			text-align: center;
		}

		.message-timestamp {
			text-align: center;
			width: 100%;
			left: 0px;
		}
	}
}

.message-item:not(.unread) {
	@include animation(inkRippleCheckbox 0.35s linear 0s 1 normal);
}


html:not(.mobile) .video-call-button {
	margin-left: 33px;
	margin-right: 10px;
	margin-top: 10px;
}

html:not(.video) #video-call {
	display: none;
}
html.video {
	#video-call {
		height: 100%;
		width: 100%;
		background: black;
		overflow: hidden !important;

		.friend {
			height: 100%;
		}

		.me {
			position: absolute;
			bottom: 0px;
			right: 0px;
		}

		.close-button {
			position: absolute;
			top: 10px;
			right: 10px;
			width: 44px;
			height: 44px;
			font-size: 25px;
		}
	}
}
@media all and (orientation: landscape) {
	#video-call {
		.friend {
			width: 100%;
		}

		.me {
			width: 20vw;
		}
	}
}
@media all and (orientation: portrait) {
	#video-call {
		.friend {
			margin-left: 50%;
			@include transform(translateX(-50%));
		}

		.me {
			max-height: 25vh;
			width: 40vw;
		}
	}
}
html.video:not(.mobile) {
	#video-call {
		height: calc(100% - 210px);
	}

	#message-list {
		max-height: 100px;

		&.is-connected #setting-up-crypto {
			display: none;
		}
	}
}
html.video.mobile {
	#video-call {

	}

	#message-list, #message-wrapper {
		display: none;
	}
}


#desktop-sidebar {
	position: absolute;
	top: 0px;
	left: 0px;
	height: 100%;
	width: 200px;
	padding: 20px;
	z-index: 10;

	.logo > img {
		width: 70%;
		margin: 0px auto;
		margin-bottom: 50px;
		display: block;
	}

	.md-button:not(.md-fab), .md-fab[disabled="disabled"] {
		font-size: 14px;
		width: 100%;
		margin-bottom: 10px;
		box-shadow: 0px 0px 2px #7239dd;
	}
}


#mobile-toolbar {
	z-index: 6;

	.logo > img {
		height: 30px !important;
		margin-left: -5px;
	}
}
html.mobile #main {
	padding-top: 40px;
}


#timer {
	font-family: 'Ubuntu Mono', monospace;
	padding-left: 10px;
}



.loading {
	> .logo-animation {
		height: 33vh;
		margin-bottom: 10px;

		> img {
			height: 100%;
			margin-left: auto;
			margin-right: auto;
			display: block;
		}
	}

	> *:not(.logo-animation) {
		letter-spacing: 1px;
		text-align: center;
		font-family: 'Ubuntu', sans-serif;
	}
}
html.mobile {
	.loading {
		font-size: 18px;
		padding: 10px;
	}
}
html:not(.mobile) {
	.loading {
		font-size: 20px;
		margin-left: -110px;
	}
}


#websign-obsolete {
	margin-left: 0px;

	p {
		text-align: left;
		font-size: 85%;
		line-height: 1.3;
		margin-bottom: 25px;
		font-family: RobotoDraft, Roboto, 'Helvetica Neue', sans-serif;
	}

	strong, a {
		color: #c50404;
	}
}


#copy-url-input input {
	text-align: center;
	margin-left: auto;
	margin-right: auto;
	outline: none;
	background-color: #f1f1f1;
	box-shadow: 0px 0px 10px #7239dd;
	padding: 5px;
	border: 1px solid #8b62d9;
	width: 50%;
}

#copy-url-link {
	display: block;
	font-size: 130%;
	word-wrap: break-word;
}

#copy-url-mobile .divider {
	width: 21px;
	display: inline-block;
}


#new-messages {
	background-color: white !important;
	color: #8b62d9;
	width: 100%;
	text-align: center;
	margin-top: -20px;
	cursor: pointer;
	z-index: 4;
}
#new-messages:after {
	width: 100%;
}


#error {
	h1 {
		text-align: center;
		font-family: 'Ubuntu', sans-serif;
	}

	img {
		margin-left: auto;
		margin-right: auto;
		display: block;
	}

	li {
		margin-bottom: 15px;
	}
}
html.mobile #error {
	padding: 5px;

	h1 {
		font-size: 20px;
	}

	img {
		width: 100%;
	}
}
html:not(.mobile) #error {
	padding: 5% 10%;
	margin-left: -38px;
	margin-right: auto;

	#errorExplanation {
		margin-left: auto;
		margin-right: auto;
		width: 75%;
	}

	img {
		width: 75%;
	}
}


#cyphertext {
	z-index: 1;
	position: fixed;
	top: -1px;
	left: -1px;
	width: 101%;
	height: 101%;
	font-size: 13px;
	font-family: 'Ubuntu Mono', monospace;
	background-color: #141414;
	color: #3bfc34;

	md-content {
		padding-top: 20px;
		padding-left: 12.5%;
	}

	.close-button {
		position: absolute;
		top: 30px;
		right: 5%;
	}

	.message-item {
		margin-left: 0px;
	}
}
#cyphertext:not(.nano) {
	overflow-y: scroll;
}
.close-button {
	color: #3bfc34 !important;
	background-color: #202020 !important;
	box-shadow: rgba(25, 130, 25, 0.137255) 0px 0px 4px 0px, rgba(25, 130, 25, 0.278431) 0px 4px 8px 0px !important;
	font-family: 'Ubuntu Mono', monospace !important;
	font-size: 30px;
}


#chat-begin-message {
	font-family: 'Ubuntu', sans-serif;
	text-align: center;
	width: 100%;
	background-color: #8b62d9 !important;

	* {
		font-weight: bold;
	}
}
#chat-begin-message {
	font-size: 12vw;
}


.formatting-help {
	md-content {
		width: 100%;
		overflow-x: hidden;
	}

	table {
		table-layout: fixed;
		width: 100%;
		overflow-x: hidden;

		th, td {
			width: 50%;
			padding-bottom: 20px;
			vertical-align: top;
		}

		th {
			font-family: Ubuntu;
			font-weight: normal;
			font-size: 115%;
			text-align: left;
		}
	}

	.spaces {
		background-color: rgba(0, 0, 0, 0.1);
	}
}
html:not(.mobile) .formatting-help {
	md-content {
		padding-left: 10%;
		padding-right: 10%;
	}

	td {
		padding-left: 20px;
	}
}
html.mobile .formatting-help {
	font-size: 75%;
}


.beta-signup-form {
	text-align: center !important;
	max-width: 620px;
	margin-left: auto;
	margin-right: auto;

	div {
		line-height: 200%;
	}

	md-input-container {
		padding: 0 10vw;
	}

	.md-button {
		@include transform(scale(0.75) !important);
		width: 200px !important;
		display: block;
		margin-left: auto;
		margin-right: auto;
		background-color: #7d4fd3 !important;
		margin-bottom: 50px;
	}
}


/*** SpinKit animation: http://tobiasahlin.com/spinkit/ ***/

.ellipsis-spinner {
	margin: 100px auto 0;
	width: 70px;
	text-align: center;
	
	> div {
		width: 12px;
		height: 12px;
		background-color: #f1f1f1;
		border-radius: 100%;
		display: inline-block;

		@include animation(ellipsis-spinner 1.4s infinite ease-in-out);
		/* Prevent first frame from flickering when animation starts */
		@include animation-fill-mode(both);
	}

	.bounce1 {
		@include animation-delay(-0.32s);
	}

	.bounce2 {
		@include animation-delay(-0.16s);
	}
}

@include keyframes(ellipsis-spinner) {
	0%, 80%, 100% { 
		@include transform(scale(0.0));
	}

	40% { 
		@include transform(scale(1.0));
	}
}

